syntax = "proto3";

package doclocker.configurations;

option go_package = "github.com/stephenzsy/doc-locker/server/gen/configurations";

message SiteConfigurationsRequest {
}

message SiteConfigurationsResponse {
    string siteConfigurationsJson = 1;
}

service ConfigurationsService {
    rpc SiteConfigurations(SiteConfigurationsRequest) returns (SiteConfigurationsResponse);
}
